Implement weather API

--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
         <div class="col-md-8">
           <h2>Current temp</h2>
           <p id="temp">20</p>
+
+          <div class="forecast">
+            <div id="forecast-city">
+              City
+            </div>
+
+            <div id="forecast-country">
+              Country
+            </div>
+
+            <div id="forecast-temp">
+              Temp
+            </div>
+
+            <div id="forecast-outlook">
+              Outlook
+            </div>
+          </div>
         </div>
 
         <div class="col-md-4">
