Adding functionality for multiple city weather search

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
           </div>
         </div>
 
+        <form id="form">
+          <input name="q"> </input>
+          <input type="submit" value="Submit"> </input>
+        </form>
+
         <div class="col-md-4">
           <h2>Controls</h2>
           <button id='increase' class="btn btn-lg btn-block btn-default">Increase</button>
