Begin adding API

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
           <button id='power_saving' class="btn btn-lg btn-block btn-default">Power saving</button>
           <button id='reset' class="btn btn-lg btn-block btn-default">Reset</button>
           <button id='usage_display' class="btn btn-lg btn-block btn-warning disabled">Current Usage</button>
+          <h3 id="save_temp"></h3>
+          <h3 id="save_power_save"></h3>
         </div>
       </div>
     </div>
